Bug 44955 - Screen flickers after LVDS turned off and back on with MacBook Pro 8,2 (Radeon HD 6600M)
Summary: Screen flickers after LVDS turned off and back on with MacBook Pro 8,2 (Radeo...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-19 12:22 UTC by Seth Forshee
Modified: 2012-02-01 13:35 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg output (64.63 KB, text/plain)
2012-01-19 12:22 UTC, Seth Forshee
no flags Details
vbios (63.50 KB, application/octet-stream)
2012-01-19 12:22 UTC, Seth Forshee
no flags Details

Description Seth Forshee 2012-01-19 12:22:12 UTC
Created attachment 55810 [details]
dmesg output

When the LVDS panel is turned on after being off the screen flickers as if the backlight is quickly alternating between low and high brightness values. The flickering gradually fades until it is no longer noticeable. The graphics card is:

ATI Technologies Inc Whistler [AMD Radeon HD 6600M Series] [1002:6741]

Other than LVDS this machine has a Thunderbolt/MiniDP connector. demsg output and vbios are attached.
Comment 1 Seth Forshee 2012-01-19 12:22:43 UTC
Created attachment 55811 [details]
vbios
Comment 2 Alex Deucher 2012-01-19 13:02:49 UTC
Do these patches help?
http://people.freedesktop.org/~agd5f/dce_fixes/
They are against drm-next or Linus' tree.
Comment 3 Seth Forshee 2012-01-19 18:11:28 UTC
(In reply to comment #2)
> Do these patches help?
> http://people.freedesktop.org/~agd5f/dce_fixes/
> They are against drm-next or Linus' tree.

Yes, those patches eliminate the flicker.
Comment 4 Florian Mickler 2012-02-01 13:14:20 UTC
A patch referencing this bug report has been merged in Linux v3.3-rc2:

commit 3a47824d85eeca122895646f027dc63480994199
Author: Alex Deucher <alexander.deucher@amd.com>
Date:   Fri Jan 20 15:01:30 2012 -0500

    drm/radeon/kms: rework modeset sequence for DCE41 and DCE5
Comment 5 Seth Forshee 2012-02-01 13:35:53 UTC
(In reply to comment #4)
> A patch referencing this bug report has been merged in Linux v3.3-rc2:
> 
> commit 3a47824d85eeca122895646f027dc63480994199
> Author: Alex Deucher <alexander.deucher@amd.com>
> Date:   Fri Jan 20 15:01:30 2012 -0500
> 
>     drm/radeon/kms: rework modeset sequence for DCE41 and DCE5

I can confirm that the problem no longer exists in v3.3-rc2. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.